--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.EditEntryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.EditEntryController">
    <children>
       <AnchorPane prefHeight="66.0" prefWidth="400.0" style="-fx-background-color: #0747A6;">
          <children>
@@ -28,24 +28,24 @@
       <JFXPasswordField fx:id="passwordField2" layoutX="50.0" layoutY="191.0" promptText="Repeat Password" />
       <JFXTextField fx:id="textFieldURL" layoutX="50.0" layoutY="229.0" promptText="URL" />
       <JFXTextArea fx:id="textAreaDescription" layoutX="50.0" layoutY="311.0" prefHeight="75.0" prefWidth="222.0" style="-fx-background-color: lightgrey;" unFocusColor="WHITE" />
-      <Label layoutX="50.0" layoutY="286.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
-      <JFXButton fx:id="btn_save" layoutX="281.0" layoutY="341.0" onAction="#btn_save" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #0747A6;" text="Save Changes" textFill="WHITE">
+      <Label layoutX="50.0" layoutY="286.0" prefHeight="17.0" prefWidth="81.0" text="Description" />
+      <JFXButton fx:id="btn_save" layoutX="281.0" layoutY="341.0" onAction="#btn_save" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: orange;" text="SAVE">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXComboBox fx:id="comboBox" focusColor="WHITE" layoutX="266.0" layoutY="75.0" prefHeight="25.0" prefWidth="126.0" unFocusColor="#fffafa" />
+      <JFXComboBox fx:id="comboBox" focusColor="WHITE" layoutX="230.0" layoutY="75.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: lightgrey;" unFocusColor="#fffafa" />
       <Label fx:id="labelErrorMessage" layoutX="208.0" layoutY="278.0" prefHeight="20.0" prefWidth="173.0" textAlignment="CENTER" textFill="RED">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <ImageView fitHeight="20.0" fitWidth="27.0" layoutX="208.0" layoutY="152.0" onMouseClicked="#btn_eyeIcon" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="20.0" fitWidth="27.0" layoutX="250.0" layoutY="152.0" onMouseClicked="#btn_eyeIcon" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/eye.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="20.0" fitWidth="27.0" layoutX="240.0" layoutY="152.0" onMouseClicked="#btn_copyPasswordToClipboard" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="20.0" fitWidth="27.0" layoutX="290.0" layoutY="152.0" onMouseClicked="#btn_copyPasswordToClipboard" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/copy_icon.png" />
          </image>
