--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/NewEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/NewEntry.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.NewEntryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.NewEntryController">
    <children>
       <AnchorPane prefHeight="66.0" prefWidth="400.0" style="-fx-background-color: #0747A6;">
          <children>
@@ -28,13 +28,13 @@
       <JFXPasswordField fx:id="pf2" layoutX="16.0" layoutY="191.0" prefHeight="25.0" prefWidth="234.0" promptText="Repeat Password" />
       <JFXTextField fx:id="tfURL" layoutX="16.0" layoutY="229.0" prefHeight="25.0" prefWidth="234.0" promptText="URL" />
       <JFXTextArea fx:id="taDescription" layoutX="15.0" layoutY="311.0" prefHeight="75.0" prefWidth="257.0" style="-fx-background-color: lightgrey;" unFocusColor="WHITE" />
-      <Label layoutX="16.0" layoutY="290.0" prefHeight="17.0" prefWidth="81.0" text="Descripntion" />
-      <JFXButton fx:id="btn_save" layoutX="303.0" layoutY="341.0" onAction="#btn_save" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: #0747A6; -fx-border-color: #ffffff; -fx-border-radius: 2px;" text="OK" textFill="WHITE">
+      <Label layoutX="16.0" layoutY="290.0" prefHeight="17.0" prefWidth="81.0" text="Description" />
+      <JFXButton fx:id="btn_save" layoutX="303.0" layoutY="341.0" onAction="#btn_save" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: orange; -fx-border-color: #ffffff; -fx-border-radius: 2px;" text="SAVE">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXComboBox fx:id="comboBox" focusColor="WHITE" layoutX="282.0" layoutY="75.0" prefHeight="25.0" prefWidth="96.0" unFocusColor="#fffafa" />
+      <JFXComboBox fx:id="comboBox" focusColor="WHITE" layoutX="267.0" layoutY="75.0" prefHeight="25.0" prefWidth="120.0" style="-fx-background-color: lightgrey;" unFocusColor="#fffafa" />
       <Label fx:id="labelErrorMessage" layoutX="208.0" layoutY="278.0" prefHeight="20.0" prefWidth="173.0" textAlignment="CENTER" textFill="RED">
          <font>
             <Font size="14.0" />
