--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/NewEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/NewEntry.fxml
@@ -11,15 +11,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.NewEntryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.NewEntryController">
    <children>
       <AnchorPane prefHeight="66.0" prefWidth="400.0" style="-fx-background-color: #0747A6;">
          <children>
-            <Label layoutX="91.0" layoutY="16.0" text="NEW ENTRY" textFill="WHITE">
+            <Label layoutX="14.0" layoutY="16.0" text="NEW ENTRY" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
+            <ImageView fitHeight="45.0" fitWidth="54.0" layoutX="315.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/logo.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <JFXTextField fx:id="tfTitle" layoutX="16.0" layoutY="75.0" prefHeight="25.0" prefWidth="234.0" promptText="Title" />
