--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/SetMasterPassword.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/SetMasterPassword.fxml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="300.0" maxWidth="300.0" minHeight="300.0" minWidth="300.0" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.SetMasterPasswordController">
+<AnchorPane maxHeight="323.0" maxWidth="378.0" minHeight="300.0" minWidth="300.0" prefHeight="323.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jpasswortbunker.mgm.view.SetMasterPasswordController">
    <children>
-      <Button layoutX="132.0" layoutY="220.0" mnemonicParsing="false" text="OK" />
-      <ImageView fitHeight="58.0" fitWidth="109.0" layoutX="106.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="90.0" fitWidth="120.0" layoutX="130.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/logo.png" />
          </image>
       </ImageView>
-      <PasswordField fx:id="password_box" layoutX="69.0" layoutY="127.0" prefHeight="23.0" prefWidth="161.0" promptText="Master Password" />
-      <PasswordField fx:id="repeatPassword_box" layoutX="70.0" layoutY="158.0" prefHeight="23.0" prefWidth="161.0" promptText="Repeat Master Password" />
-      <Label fx:id="l_MasterKeyWrong" layoutX="70.0" layoutY="190.0" prefHeight="17.0" prefWidth="161.0" textFill="RED" />
+      <Label fx:id="labelErrorMessage" layoutX="96.0" layoutY="225.0" prefHeight="17.0" prefWidth="161.0" textFill="RED" />
+      <JFXPasswordField fx:id="passwordField1" layoutX="96.0" layoutY="137.0" prefHeight="25.0" prefWidth="187.0" promptText="Masterpassword" />
+      <JFXPasswordField fx:id="passwordField2" layoutX="96.0" layoutY="186.0" prefHeight="25.0" prefWidth="187.0" promptText="Repeat Masterpassword" />
+      <JFXButton layoutX="237.0" layoutY="249.0" onAction="#btn_setMasterPassword" prefHeight="35.0" prefWidth="57.0" style="-fx-background-color: orange;" text="OK" />
    </children>
 </AnchorPane>
