--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -32,12 +34,14 @@
                     </image>
                 </ImageView>
                 <Label fx:id="label_wrongPassword" layoutX="40.0" layoutY="264.0" textFill="RED" />
+            <JFXTextField fx:id="textFieldPassword" layoutX="40.0" layoutY="225.0" prefHeight="25.0" prefWidth="191.0" />
             <JFXPasswordField fx:id="password_box" layoutX="40.0" layoutY="225.0" onAction="#btn_login" prefHeight="25.0" prefWidth="191.0" promptText="Password" />
             <JFXButton fx:id="btn_login" layoutX="257.0" layoutY="225.0" onAction="#btn_login" style="-fx-background-color: orange;" text="Login">
                <font>
                   <Font size="13.0" />
                </font>
             </JFXButton>
+            <JFXCheckBox fx:id="checkBoxShowPassword" layoutX="257.0" layoutY="264.0" onAction="#checkBox" text="Show Password" />
             </children>
         </AnchorPane>
     </children>
