--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
@@ -34,7 +34,7 @@
                     </image>
                 </ImageView>
                 <Label fx:id="label_wrongPassword" layoutX="40.0" layoutY="264.0" textFill="RED" />
-            <JFXTextField fx:id="textFieldPassword" layoutX="40.0" layoutY="225.0" prefHeight="25.0" prefWidth="191.0" />
+            <JFXTextField fx:id="textFieldPassword" layoutX="40.0" layoutY="225.0" onAction="#btn_login" prefHeight="25.0" prefWidth="191.0" />
             <JFXPasswordField fx:id="password_box" layoutX="40.0" layoutY="225.0" onAction="#btn_login" prefHeight="25.0" prefWidth="191.0" promptText="Password" />
             <JFXButton fx:id="btn_login" layoutX="257.0" layoutY="225.0" onAction="#btn_login" style="-fx-background-color: orange;" text="Login">
                <font>
